--- a/wordpress-theme/package.json
+++ b/wordpress-theme/package.json
@@ -24,18 +24,24 @@
 		"lint": "npm-run-all --parallel lint:*",
 		"lint:js": "eslint --ext .js,.jsx",
 		"lint:php": "composer lint",
-		"lint:scss": "stylelint \"**/*.scss\" --syntax scss --formatter verbose"
+		"lint:scss": "stylelint \"**/*.scss\" --syntax scss --formatter verbose",
+		"release": "standard-version -a -s"
 	},
 	"dependencies": {
 		"modern-normalize": "^1.1.0"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^13.1.0",
+		"@commitlint/config-conventional": "^13.1.0",
 		"@wordpress/eslint-plugin": "^9.1.1",
 		"@wordpress/prettier-config": "^1.1.0",
 		"@wordpress/stylelint-config": "^19.1.0",
 		"eslint": "^7.32.0",
+		"husky": "^7.0.2",
+		"lint-staged": "^11.1.2",
 		"npm-run-all": "^4.1.5",
 		"prettier": "npm:wp-prettier@^2.2.1-beta-1",
+		"standard-version": "^9.3.1",
 		"stylelint": "^13.13.1",
 		"stylelint-config-prettier": "^8.0.2"
 	}
