chore: use dotenv to load stylesheets or webpack scripts
Since in dev mode webpack uses style-loader for CSS, we do not want to
enqueue CSS files. Otherwise styles might not be updated.
Also I added the webpack runtime which is required.

--- a/wordpress-theme/.env.example
+++ b/wordpress-theme/.env.example
@@ -1,3 +1,7 @@
+# Current environment.
+# Type: string - Either 'production', 'development' or a custom environment.
+WP_THEME_ENV='development'
+
 #########################
 # webpack configuration #
 #########################
