--- a/wordpress-theme/composer.json
+++ b/wordpress-theme/composer.json
@@ -20,7 +20,8 @@
 	],
 	"type": "wordpress-theme",
 	"require": {
-		"composer/installers": "^1.0.0 || ^2.0.0"
+		"composer/installers": "^1.0.0 || ^2.0.0",
+		"vlucas/phpdotenv": "^5.3"
 	},
 	"require-dev": {
 		"wp-coding-standards/wpcs": "^2.3",
