feat: add an init script to search and replace placeholders

--- a/wordpress-theme/.env.example
+++ b/wordpress-theme/.env.example
@@ -2,6 +2,76 @@
 # Type: string - Either 'production', 'development' or a custom environment.
 WP_THEME_ENV='development'
 
+#######################
+# Theme configuration #
+#######################
+# Your public theme name. It can contain spaces.
+# Type: string - Your theme name.
+WP_THEME_NAME='Your theme name'
+
+# Short description used by CSS Header and readme.txt.
+# Type: string - A description shorter than 150 chars.
+WP_THEME_DESCRIPTION='Your theme description.'
+
+# Used by readme.txt to list contributors.
+# Accepts one or more usernames separated with a comma.
+# Only useful if you plan to publish your theme on WordPress Theme directory.
+# Type: string - A list of usernames.
+WP_THEME_CONTRIBUTORS='WP.org Username1, WP.org Username2'
+
+# Your team/company name.
+# Type: string - Your team/company name (or your name).
+WP_THEME_TEAM_NAME='Company Name'
+
+# Your team/company email.
+# Type: string - An email address.
+WP_THEME_TEAM_EMAIL='contact@email.com'
+
+# Your team/company website.
+# Type: string - An URL.
+WP_THEME_TEAM_URL='https://www.companyWebsite.com/'
+
+# Current contributor name.
+# Type: string - Your name.
+WP_THEME_CONTRIBUTOR_NAME='Firstname Lastname'
+
+# Current contributor email.
+# Type: string - An email address.
+WP_THEME_CONTRIBUTOR_EMAIL='your@email.com'
+
+# Text domain used to retrieve translatable strings.
+# Type: string.
+WP_THEME_TEXT_DOMAIN='yourTextDomain'
+
+# Current contributor name and email.
+WP_THEME_LAST_TRANSLATOR="${WP_THEME_CONTRIBUTOR_NAME} <${WP_THEME_CONTRIBUTOR_EMAIL}>"
+
+# Team name and email.
+WP_THEME_TRANSLATION_TEAM="${WP_THEME_TEAM_NAME} <${WP_THEME_TEAM_EMAIL}>"
+
+#########################
+# Package configuration #
+#########################
+# Used by composer.json and package.json. Also used as Theme URI inside CSS.
+# Type: string - An URL.
+WP_THEME_REPO='https://github.com/your/repo'
+
+# Used by composer.json.
+# Type: string - A lowercase name.
+WP_THEME_VENDOR_NAME='your-vendor-name'
+
+# Used by composer.json, package.json and as @package field inside PHP files.
+# Type: string - A capitalized name.
+WP_THEME_PACKAGE_CAPITALIZE='Your-Package-Name'
+
+# Used by PHP files to prefix functions and constants.
+# Type: string - A name formatted in Pascal case.
+WP_THEME_PREFIX_PASCALCASE='YourPrefix'
+
+# Used inside @copyright field inside PHP files.
+# Type: string - A year.
+WP_THEME_COPYRIGHT_YEAR='2021'
+
 #########################
 # webpack configuration #
 #########################
