--- a/wordpress-theme/package.json
+++ b/wordpress-theme/package.json
@@ -22,6 +22,7 @@
 		"fix:js": "eslint --ext .js,.jsx --fix",
 		"fix:php": "composer fix",
 		"fix:scss": "stylelint \"**/*.scss\" --fix",
+		"init": "node ./tools/init.js",
 		"lint": "npm-run-all --parallel lint:*",
 		"lint:js": "eslint --ext .js,.jsx",
 		"lint:php": "composer lint",
@@ -65,6 +66,7 @@
 		"postcss": "^7.0.36",
 		"postcss-loader": "^6.1.1",
 		"prettier": "npm:wp-prettier@^2.2.1-beta-1",
+		"replace-in-file": "^6.2.0",
 		"sass": "^1.39.0",
 		"sass-loader": "^12.1.0",
 		"standard-version": "^9.3.1",
