--- a/wordpress-theme/package.json
+++ b/wordpress-theme/package.json
@@ -31,7 +31,8 @@
 		"serve": "webpack serve --node-env=development",
 		"translate": "npm-run-all --parallel translate:*",
 		"translate:php": "node ./tools/translate.js",
-		"watch": "webpack --watch --progress --node-env=development"
+		"watch": "webpack --watch --progress --node-env=development",
+		"zip": "node ./tools/zip.js"
 	},
 	"dependencies": {
 		"dotenv": "^8.6.0",
@@ -49,6 +50,7 @@
 		"@wordpress/prettier-config": "^1.1.0",
 		"@wordpress/stylelint-config": "^19.1.0",
 		"autoprefixer": "^9.8.6",
+		"archiver": "^5.3.0",
 		"babel-loader": "^8.2.2",
 		"browserslist": "^4.17.0",
 		"copy-webpack-plugin": "^9.0.1",
