feat: add a script to generate a screenshot with correct dimensions
I choose the Firefox version because webkit does not work for me and
the Chrome version is a little heavier.

--- a/wordpress-theme/package.json
+++ b/wordpress-theme/package.json
@@ -28,6 +28,7 @@
 		"lint:php": "composer lint",
 		"lint:scss": "stylelint \"**/*.scss\" --syntax scss --formatter verbose",
 		"release": "standard-version -a -s",
+		"screenshot": "node ./tools/screenshot.js",
 		"serve": "webpack serve --node-env=development",
 		"translate": "npm-run-all --parallel translate:*",
 		"translate:php": "node ./tools/translate.js",
@@ -67,6 +68,7 @@
 		"lint-staged": "^11.1.2",
 		"mini-css-extract-plugin": "^2.2.2",
 		"npm-run-all": "^4.1.5",
+		"playwright-firefox": "^1.14.1",
 		"postcss": "^7.0.36",
 		"postcss-loader": "^6.1.1",
 		"prettier": "npm:wp-prettier@^2.2.1-beta-1",
